...
            "state": "translated",
            "value": "Aktives Signierzertifikat ausstehend"
          }
        }
      }
    },
    "Add": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Add"
...
            "state": "translated",
            "value": "Kurzbefehle hinzufügen"
          }
        }
      }
    },
    "Add Source": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Add Source"
...
            "state": "translated",
            "value": "Kann jederzeit in den Einstellungen hinzugefügt werden"
          }
        }
      }
    },
    "Cancel": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
...
            "state": "translated",
            "value": "Standard (automatisches Team-Profil)"
          }
        }
      }
    },
    "Delete": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete"
...
            "state": "translated",
            "value": "Alle Profile im Portal löschen"
          }
        }
      }
    },
    "Delete App": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Delete App"
...
            "state": "translated",
            "value": "Diese Warnung nicht mehr anzeigen"
          }
        }
      }
    },
    "Done": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Done"
...
            "state": "translated",
            "value": "Quellenname"
          }
        }
      }
    },
    "Sources": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Sources"
...
