...
        guard var sourceURL = dInstance.sourceSourceURL else { return }
        
        // Copied from Source.setSourceURL()
        
        // zloader official soruce has been moved to zloader.io/apps-v2.json
        // if we don't switch, users will end up with 2 offical sources
        if sourceURL.absoluteString.contains("apps.zloader.io")       // if using old source
        {
            sourceURL = Source.zLoaderSourceURL                        // switch to latest
        }
        
        let sourceID = try Source.sourceID(from: sourceURL)
        dInstance.setSourceSourceID(sourceID)
...
