...
    ("Export Resigned IPA",                     .exportResignedIPA),
    ("Fetch Provisioning Profiles",             .fetchProvisioningProfiles),
    ("Install App",                             .installApp),
    ("Preflight Checks",                        .preflightChecks),
    ("Prepare App Extension Bundle IDs",        .prepareAppExtensionBundleIDs),
    ("Refresh App",                             .refreshApp),
    ("Remove App",                              .removeApp),
    ("Remove App Extensions",                   .removeAppExtensions),
    ("Remove Backup Data",                      .removeBackupData),
    ("Resign App",                              .resignApp),
    ("Restore App Data",                        .restoreAppData),
    ("Send App",                                .sendApp),
    ("Stage App",                               .stageApp),
...
