...
    public var pasteLabelText: String {
        if copiedURLs.count == 1, let first = copiedURLs.first {
            return "Paste “\(first.lastPathComponent)”"
        } else if copiedURLs.count > 1 {
            return "Paste \(copiedURLs.count) Items"
        }
        return "Paste"
    }
    
    public func setCopied(urls: [URL]) {
        self.copiedURLs = urls
    }
    
...
